--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ cython_debug/
 
 /tests/test_output.puml
 !/Diagrams/MySequenceDiagram.puml
+!/Diagrams/MySequenceDiagram.puml
+!/Diagrams/MySequenceDiagram.puml
